--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_PORT=5000
-DB_URI="mongodb+srv://employeeTracker:V8QDQ6gqzde6SwKu@cluster0.cd0zz2r.mongodb.net/employee_tracker"
+DB_URI="mongodb+srv://doadmin:FO25QmY68g1790Zo@employeetrack-46f3a966.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=employeetrack"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465
 SMTP_SERVICE="gmail"
