--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ DB_URI="mongodb+srv://doadmin:FO25QmY68g1790Zo@employeetrack-46f3a966.mongo.ondi
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=465
 SMTP_SERVICE="gmail"
-SMTP_MAIL="mdmajed547@gmail.com"
-SMTP_PASSWORD="fjzieswwwqiuvgrk"
+# SMTP_MAIL="mdmajed547@gmail.com"
+SMTP_MAIL="noreply.applyapp@gmail.com"
+SMTP_PASSWORD="d i r h a h a p r h a s u y t p"
+# SMTP_PASSWORD="fjzieswwwqiuvgrk"
 JWT_SECRET="37f212238e6314677fbbdfe2d1e652211a19ba24"
 JWT_EXPIRE="7d"
